--- a/.config/bspwm/picom_old.conf
+++ b/.config/bspwm/picom_old.conf
@@ -1,40 +1,4 @@
 #################################
-#          Animations           #
-#################################
-# requires https://github.com/jonaburg/picom
-# (These are also the default values)
-transition-length = 100
-transition-pow-x = 0.95
-transition-pow-y = 0.95
-transition-pow-w = 0.95
-transition-pow-h = 0.95
-size-transition = true
-
-
-#################################
-#             Corners           #
-#################################
-# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
-rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
-];
-round-borders = 1;
-round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
-];
-
-#################################
 #             Shadows           #
 #################################
 
@@ -44,7 +8,7 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -98,14 +62,32 @@ shadow-offset-y = -7;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "class_g = 'slop'",
-  "class_g = 'Polybar'",
-  "_GTK_FRAME_EXTENTS@:c"
+    "name = 'Notification'",
+    "class_g ?= 'Notify-osd'",
+    "name = 'Plank'",
+    "name = 'Docky'",
+    "name = 'Kupfer'",
+    "name = 'xfce4-notifyd'",
+    "name *= 'VLC'",
+    "name *= 'compton'",
+    "name *= 'Chromium'",
+    "name *= 'Chrome'",
+    "class_g = 'Firefox' && argb",
+    "class_g = 'Conky'",
+    "class_g = 'Kupfer'",
+    "class_g = 'Synapse'",
+    "class_g ?= 'Notify-osd'",
+    "class_g ?= 'Cairo-dock'",
+    "class_g = 'Cairo-clock'",
+    "class_g ?= 'Xfce4-notifyd'",
+    "class_g ?= 'Xfce4-power-manager'",
+    "_GTK_FRAME_EXTENTS@:c",
 ];
+
+# Add this one too for ...
+    # "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+# Add this one above to the list to have no shadow in Openbox menu
+	# "! name~=''",
 
 # Specify a X geometry that describes the region in which shadow should not
 # be painted in, such as a dock window region. Use 
@@ -126,24 +108,21 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.1;
+fade-in-step = 0.03;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.1;
+fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
-# don't need this, we disable fading for all normal windows with wintypes: {}
-fade-exclude = [
-  "class_g = 'slop'"   # maim
-]
+# fade-exclude = []
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
@@ -159,38 +138,28 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 1;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0 
-# menu-opacity is depreciated use dropdown-menu and popup-menu instead.
-
-#If using these 2 below change their values in line 510 & 511 aswell
-popup_menu = { opacity = 0.8; }
-dropdown_menu = { opacity = 0.8; }
-
+menu-opacity = 0.9
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 1.0;
+active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [
-  "class_g = 'Cairo-clock'",
-  "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
-];
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -203,34 +172,34 @@ focus-exclude = [
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = [
-  "85:class_g     = 'Termite'", 
-  "90:class_g     = 'Nemo'", 
-  "90:class_g     = 'Gvim'", 
-  "80:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
-];
 
 
 #################################
 #     Background-Blurring       #
 #################################
+blur: {
+    method = "dual_kawase";
+    strength = 7.0;
+    deviation = 1.0;
+    # kernel = "11x11gaussian";
+}
 
+blur-background = false;
+blur-background-frame = true;
+blur-background-fixed = true;
+# blur-kern = "3x3box";
+
+blur-background-exclude = [
+    "window_type = 'desktop'",
+    "window_type = 'utility'",
+    "class_g = 'slop'",
+    "class_g = 'Firefox' && argb",
+    "_GTK_FRAME_EXTENTS@:c"
+];
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = 
-# blur-size = 12
+#blur-size = 12
 #
 # blur-deviation = false
 
@@ -238,18 +207,18 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = true;
+# blur-background = false
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false;
+# blur-background-frame = false
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false;
+# blur-background-fixed = false
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -257,34 +226,16 @@ opacity-rule = [
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-# blur-kern = "3x3box";
+#blur-kern = "3x3box";
 
-blur: {
-  # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
-  #method = "kernel";
-  strength = 7;
-  deviation = 1.0;
-  # kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
-}
 
 # Exclude conditions for background blur.
-blur-background-exclude = [
-  #"window_type = 'dock'",
-  #"window_type = 'desktop'",
-  #"class_g = 'URxvt'",
-  #
-  # prevents picom from blurring the background
-  # when taking selection screenshot with `main`
-  # https://github.com/naelstrof/maim/issues/130
-  "class_g = 'slop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
+# blur-background-exclude = []
+#blur-background-exclude = [
+#  "window_type = 'dock'",
+#  "window_type = 'desktop'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
 #################################
 #       General Settings        #
@@ -296,13 +247,10 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-experimental-backends = true;
-backend = "glx";
-#backend = "xrender";
-#backend = "xr_glx_hybrid"
+# backend = 'glx'
+backend = "xrender";
 
-
-# Enable/disable VSync.
+# Enable/disable VSync. Set to false for transparency in VirtualBox.
 # vsync = false
 vsync = true
 
@@ -353,7 +301,7 @@ refresh-rate = 0
 
 # Unredirect all windows if a full-screen opaque window is detected, 
 # to maximize performance for full-screen windows. Known to cause flickering 
-# when redirecting/unredirecting windows. paint-on-overlay may make the flickering less obvious.
+# when redirecting/unredirecting windows.
 #
 # unredir-if-possible = false
 
@@ -414,9 +362,7 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-#use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
-#Changing use-damage to false fixes the problem
-use-damage = false
+use-damage = true
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
@@ -459,7 +405,7 @@ use-damage = false
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "info";
+log-level = "warn";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr. 
@@ -467,7 +413,7 @@ log-level = "info";
 # logs might still be written to the stderr. 
 # When setting this option from the config file, it is recommended to use an absolute path.
 #
-# log-file = '/path/to/your/log/file'
+# log-file = '~/.config/compton.log'
 
 # Show all X errors (for debugging)
 # show-all-xerrors = false
@@ -507,11 +453,11 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = false; shadow = false; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.9; }
+  dropdown_menu = { opacity = 0.9; }
 };
+
 
