--- a/.config/bspwm/picom.conf
+++ b/.config/bspwm/picom.conf
@@ -18,16 +18,13 @@ size-transition = true
 corner-radius = 10.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
-  "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
   "class_g = 'kitty'",
   "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -261,7 +258,7 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
+  method = "kawase";
   #method = "kernel";
   strength = 7;
   deviation = 1.0;
@@ -275,7 +272,8 @@ blur: {
 # Exclude conditions for background blur.
 blur-background-exclude = [
   #"window_type = 'dock'",
-  #"window_type = 'desktop'",
+  "window_type = 'desktop'",
+  "class_g = 'Microsoft Teams - Preview'",
   #"class_g = 'URxvt'",
   #
   # prevents picom from blurring the background
