--- a/.config/termite/config
+++ b/.config/termite/config
@@ -43,31 +43,79 @@ urgent_on_bell = true
 #### https://terminal.sexy
 #### https://critical.ch/xterm/
 ############################################################
-
 [colors]
-cursor = #d8dee9
-cursor_foreground = #2e3440
+# Base16 Gruvbox dark, soft
+# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 
-foreground = #d8dee9
-foreground_bold = #d8dee9
-background = #2e3440
+foreground      = #d5c4a1
+foreground_bold = #ebdbb2
+cursor          = #ebdbb2
+background = rgba(40, 42, 54, 0.8)
 
-highlight = #4c566a
+# 16 color space
 
-color0  = #3b4252
-color1  = #bf616a
-color2  = #a3be8c
-color3  = #ebcb8b
-color4  = #81a1c1
-color5  = #b48ead
-color6  = #88c0d0
-color7  = #e5e9f0
-color8  = #4c566a
-color9  = #bf616a
-color10 = #a3be8c
-color11 = #ebcb8b
-color12 = #81a1c1
-color13 = #b48ead
-color14 = #8fbcbb
-color15 = #eceff4
+# Black, Gray, Silver, White
+color0  = #32302f
+color8  = #665c54
+color7  = #d5c4a1
+color15 = #fbf1c7
+
+# Red
+color1  = #fb4934
+color9  = #fb4934
+
+# Green
+color2  = #b8bb26
+color10 = #b8bb26
+
+# Yellow
+color3  = #fabd2f
+color11 = #fabd2f
+
+# Blue
+color4  = #83a598
+color12 = #83a598
+
+# Purple
+color5  = #d3869b
+color13 = #d3869b
+
+# Teal
+color6  = #8ec07c
+color14 = #8ec07c
+
+# Extra colors
+color16 = #fe8019
+color17 = #d65d0e
+color18 = #3c3836
+color19 = #504945
+color20 = #bdae93
+color21 = #ebdbb2
+
+# [colors]
+# cursor = #d8dee9
+# cursor_foreground = #2e3440
+
+# foreground = #d8dee9
+# foreground_bold = #d8dee9
+# background = #2e3440
+
+# highlight = #4c566a
+
+# color0  = #3b4252
+# color1  = #bf616a
+# color2  = #a3be8c
+# color3  = #ebcb8b
+# color4  = #81a1c1
+# color5  = #b48ead
+# color6  = #88c0d0
+# color7  = #e5e9f0
+# color8  = #4c566a
+# color9  = #bf616a
+# color10 = #a3be8c
+# color11 = #ebcb8b
+# color12 = #81a1c1
+# color13 = #b48ead
+# color14 = #8fbcbb
+# color15 = #eceff4
 
