--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -37,8 +37,8 @@ gesture swipe left	xdotool key alt+Left
 gesture swipe right	xdotool key alt+Right
 
 # zoom
-gesture pinch in xdotool key ctrl+shift+plus
-gesture pinch out	xdotool key ctrl+minus
+gesture pinch in xdotool key ctrl+minus
+gesture pinch out	xdotool key ctrl+shift+plus
 
 # Jump to next open browser tab
 # gesture swipe right_up xdotool key control+Tab
