once more some updates

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -35,8 +35,8 @@ shadow-exclude = [
 
 fading = true;
 
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
 
 fade-exclude = [
   "class_g = 'slop'",
@@ -100,6 +100,7 @@ rounded-corners-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'i3lock'",
   "class_g = 'Screenkey'",
+  "class_g = 'eww-bar'",
   "class_g = 'eww-taskbar'",
   "class_g = 'eww-calendar_win'",
 ]
